clusters/t480s-k3s/apps/welcome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-deployment
  namespace: default
  labels:
    app: welcome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: welcome
  template:
    metadata:
      labels:
        app: welcome
    spec:
      containers:
        - name: welcome
          image: nginx:stable
          ports:
            - containerPort: 80
