clusters/t480s-k3s/apps/welcome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-service
  namespace: default
spec:
  selector:
    app: welcome
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
